# Prueba-T-cnica---Programador-Backend--PythonFastAPI-

./: .env  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
All Request/: Insomnia_2025-09-03.har  Insomnia_2025-09-03.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
app/: main.py
app/api/: deps.py  errors.py
app/api/routes/: auth.py  tasks.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: task.py  user.py
app/schemas/: task.py
tests/: conftest.py  test_auth_and_tasks.py
todos_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
